force-app/main/default/objects/filesconnect__Template__c/filesconnect__Template__c.object-meta.xml
<CustomObject>
    <label>Template</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>