force-app/main/default/objects/filesconnect__Template__c/fields/filesconnect__Description__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>