force-app/main/default/objects/filesconnect__Template__c/fields/filesconnect__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>filesconnect__TemplateId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Template Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>